test/tasty/pos/src-3/tastytest/Delayed.scala
package tastytest

sealed trait Delayed

object Delayed {
  final class Instance[T]() extends Delayed
}
